--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 </head>
 <body>
   <header class="cabecalho">
-    <h1>
+    <h1 class="logo">
       <a href="index.html" title="Nodeshop - Loja de Informática">Nodeshop - Loja de Informática</a>
     </h1>
     <form method="post">
       <input type="text" placeholder="Faça uma busca">
-      <button><i class="fa fa-search"></i></button>
+      <button><i class="fa fa-search fa-lg"></i></button>
     </form>
   </header>
 </body>
