--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
       <li> <a href="#"> Serviços </a></li>
       <li> <a href="#"> Contatos </a></li>
     </ul>
+    <div class="social-icons">
+      <a href="#" class="btn-facebook"> <i class="fa fa-facebook fa-lg"></i></a>
+      <a href="#" class="btn-twitter"> <i class="fa fa-twitter fa-lg"> </i></a>
+      <a href="#" class="btn-google"> <i class="fa fa-google fa-lg"> </i></a>
+    </div>
   </nav>
 </body>
 
