--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
       <a href="#" class="btn-google"> <i class="fa fa-google fa-lg"> </i></a>
     </div>
   </nav>
+  <main class="principal">
+    <article class="sobre">
+      <h2>Sobre nós</h2>
+      <img src="img/loja.jpg" alt="NodeShop">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vestibulum lectus mauris ultrices eros. Magnis dis parturient montes nascetur ridiculus mus mauris vitae. A diam sollicitudin tempor id. Faucibus scelerisque eleifend donec pretium vulputate sapien nec sagittis aliquam. Posuere morbi leo urna molestie at elementum eu facilisis. Turpis egestas integer eget aliquet nibh praesent tristique magna sit. Nisl rhoncus mattis rhoncus urna neque viverra justo nec. Facilisis sed odio morbi quis commodo odio aenean. Congue mauris rhoncus aenean vel elit scelerisque mauris pellentesque.Posuere morbi leo urna molestie at elementum eu facilisis. Turpis egestas integer eget aliquet nibh praesent tristique magna sit. Nisl rhoncus mattis rhoncus urna neque viverra justo nec. Facilisis sed odio morbi quis commodo odio aenean. Congue mauris rhoncus aenean vel elit scelerisque mauris pellentesque.</p><br>
+      <p>Facilisis sed odio morbi quis commodo odio aenean. Congue mauris rhoncus aenean vel elit scelerisque mauris pellentesque.Posuere morbi leo urna molestie at elementum eu facilisis. Turpis egestas integer eget aliquet nibh praesent tristique magna sit. Nisl rhoncus mattis rhoncus urna neque viverra justo nec. Facilisis sed odio morbi quis commodo odio aenean. Congue mauris rhoncus aenean vel elit scelerisque mauris pellentesque.</p>
+    </article>
+  </main>
 </body>
 
 </html>
