--- a/index.html
+++ b/index.html
@@ -39,7 +39,27 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vestibulum lectus mauris ultrices eros. Magnis dis parturient montes nascetur ridiculus mus mauris vitae. A diam sollicitudin tempor id. Faucibus scelerisque eleifend donec pretium vulputate sapien nec sagittis aliquam. Posuere morbi leo urna molestie at elementum eu facilisis. Turpis egestas integer eget aliquet nibh praesent tristique magna sit. Nisl rhoncus mattis rhoncus urna neque viverra justo nec. Facilisis sed odio morbi quis commodo odio aenean. Congue mauris rhoncus aenean vel elit scelerisque mauris pellentesque.Posuere morbi leo urna molestie at elementum eu facilisis. Turpis egestas integer eget aliquet nibh praesent tristique magna sit. Nisl rhoncus mattis rhoncus urna neque viverra justo nec. Facilisis sed odio morbi quis commodo odio aenean. Congue mauris rhoncus aenean vel elit scelerisque mauris pellentesque.</p><br>
       <p>Facilisis sed odio morbi quis commodo odio aenean. Congue mauris rhoncus aenean vel elit scelerisque mauris pellentesque.Posuere morbi leo urna molestie at elementum eu facilisis. Turpis egestas integer eget aliquet nibh praesent tristique magna sit. Nisl rhoncus mattis rhoncus urna neque viverra justo nec. Facilisis sed odio morbi quis commodo odio aenean. Congue mauris rhoncus aenean vel elit scelerisque mauris pellentesque.</p>
     </article>
+    <aside class="onde-estamos">
+      <h2>Onde estamos</h2>
+      <p> Rua São Gabriel, 30 São Sebastião do Caí - RS</p>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3469.201662131988!2d-51.36943568536593!3d-29.597823417606108!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x951bfdbff6851509%3A0x88c37be0ce95b81c!2zUi4gU8OjbyBHYWJyaWVsLCAzMCwgU8OjbyBTZWJhc3Rpw6NvIGRvIENhw60gLSBSUywgOTU3NjAtMDAw!5e0!3m2!1spt-BR!2sbr!4v1621971886514!5m2!1spt-BR!2sbr"></iframe>
+      <h2>Contatos</h2>
+      <ul>
+        <li> <i class="fa fa-phone fa-lg"> </i> (51) 998760585</li>
+        <li> <i class="fa fa-whatsapp fa-lg"> </i> (51) 998760585</li>
+        <li> <i class="fa fa-envelope fa-lg"> </i> diegorafaelvieira@bol.com.br</li>     
+      </ul>
+    </aside>
   </main>
+  <section class="newsletter">
+    <h3>Newsletter</h3>
+    <p>Receba nossas promoções por email</p>
+    <form method="POST">
+      <input type="text" placeholder="Seu nome">
+      <input type="email" placeholder="Seu email">
+      <button>Cadastrar</button>
+    </form>
+  </section>
 </body>
 
 </html>
