--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
       <button>Cadastrar</button>
     </form>
   </section>
+  <footer class="rodape">
+    <p> &copy; NodeShop - Todos os direitos reservados</p>
+  </footer>
 </body>
 
 </html>
